# openvdb_ax

./: .gitignore  .travis.yml  BuildingWithCMake.md  CHANGES.md  CMakeLists.txt  INSTALL  README.md  ROADMAP.md
.github/workflows/: build.yml  whitespace.yml
ci/: build.sh  extract_test_examples.sh  install_llvm.sh
cmake/: FindHDK.cmake  FindLLVM.cmake  FindOpenVDB.cmake  FindOpenVDB_AX.cmake  FindOpenVDB_Houdini.cmake
cmake/backports/: FindBlosc.cmake  FindOpenVDB.cmake  OpenVDBHoudiniSetup.cmake
openvdb_ax/: CHANGES.md  CMakeLists.txt  COPYRIGHT.md  Exceptions.h  Makefile  ax.cc  ax.h  doxygen-config  version.h
openvdb_ax/ast/: AST.cc  AST.h  Literals.h  Parse.cc  Parse.h  PrintTree.cc  PrintTree.h  Scanners.cc  Scanners.h  Tokens.h  Visitor.h
openvdb_ax/cmd/: CMakeLists.txt  openvdb_ax.cc
openvdb_ax/cmd/openvdb_ax/: main.cc
openvdb_ax/codegen/: ComputeGenerator.cc  ComputeGenerator.h  ConstantFolding.h  FunctionRegistry.cc  FunctionRegistry.h  FunctionTypes.cc  FunctionTypes.h  Functions.cc  Functions.h  LeafLocalData.h  OpenSimplexNoise.h  PointComputeGenerator.cc  PointComputeGenerator.h  PointFunctions.cc  PointFunctions.h  PointLeafLocalData.h  StandardFunctions.cc  SymbolTable.h  Types.cc  Types.h  Utils.h  VolumeComputeGenerator.cc  VolumeComputeGenerator.h  VolumeFunctions.cc  VolumeFunctions.h
openvdb_ax/compiler/: AttributeRegistry.h  Compiler.cc  Compiler.h  CompilerOptions.h  CustomData.h  LeafLocalData.h  Logger.cc  Logger.h  PointExecutable.cc  PointExecutable.h  TargetRegistry.h  VolumeExecutable.cc  VolumeExecutable.h
openvdb_ax/doc/: CMakeLists.txt  ax.txt  axfunctionlist.txt  codeexamples.txt  doc.txt  doxygen-config  functions.txt  language.txt  openvdbax.txt  openvdbaxbuild.txt
openvdb_ax/grammar/: axlexer.cc  axlexer.l  axparser.cc  axparser.h  axparser.y
openvdb_ax/math/: OpenSimplexNoise.cc  OpenSimplexNoise.h
openvdb_ax/python/: CMakeLists.txt  pyCompiler.cc  pyCompiler.h  pyOpenVDBAX.cc  pyPointExecutable.cc  pyPointExecutable.h  pyVolumeExecutable.cc  pyVolumeExecutable.h
openvdb_ax/test/: CMakeLists.txt  main.cc  util.h
openvdb_ax/test/ast/: TestPrinters.cc  TestScanners.cc
openvdb_ax/test/backend/: TestComputeGeneratorFailures.cc  TestFunctionBase.cc  TestFunctionGroup.cc  TestFunctionRegistry.cc  TestFunctionSignature.cc  TestFunctionTypes.cc  TestLogger.cc  TestSymbolTable.cc  TestTypes.cc  util.h
openvdb_ax/test/compiler/: TestAXRun.cc  TestPointExecutable.cc  TestVolumeExecutable.cc
openvdb_ax/test/frontend/: TestArrayPack.cc  TestArrayUnpack.cc  TestArrayUnpackNode.cc  TestAssignExpressionNode.cc  TestAttributeAssignExpressionNode.cc  TestAttributeNode.cc  TestAttributeValueNode.cc  TestBinaryOperatorNode.cc  TestCastNode.cc  TestCommaOperator.cc  TestConditionalStatementNode.cc  TestCrementNode.cc  TestDeclareLocalNode.cc  TestExternalVariableNode.cc  TestFunctionCallNode.cc  TestKeywordNode.cc  TestLocalNode.cc  TestLocalValueNode.cc  TestLoopNode.cc  TestStatementListNode.cc  TestSyntaxFailures.cc  TestTernaryOperatorNode.cc  TestUnaryOperatorNode.cc  TestValueNode.cc  TestVectorPack.cc  TestVectorUnpack.cc
openvdb_ax/test/integration/: CompareGrids.cc  CompareGrids.h  TestArrayUnpack.cc  TestAssign.cc  TestBinary.cc  TestCast.cc  TestChannelExpressions.cc  TestConditional.cc  TestCrement.cc  TestDeclare.cc  TestEditGroups.cc  TestEmpty.cc  TestExternals.cc  TestFunction.cc  TestGroups.cc  TestHarness.cc  TestHarness.h  TestKeyword.cc  TestLoop.cc  TestStandardFunctions.cc  TestString.cc  TestTernary.cc  TestUnary.cc  TestVDBFunctions.cc  TestWorldSpaceAccessors.cc
openvdb_ax/test/snippets/assign/: assignArithmetic  assignChains  assignDecrementArithmetic  assignDuplicateLocalVariables  assignDuplicateScopedLocalVariables  assignExpression  assignFromExternals  assignFromGroup  assignIncrementArithmetic  assignLocalVariables  assignLocalVectorVariableElements  assignLocalVectorVariables  assignScalarAttributes  assignScalarFromVector  assignScopedLocalVariables  assignVectorAttributeElements  assignVectorAttributes  assignVectorFromScalar  assignVectorMappings
openvdb_ax/test/snippets/binary/: binaryBitwise  binaryFloatingArithmetic  binaryIntegerArithmetic  binaryLogical  binaryRelational  binaryVectorArithmetic  binaryVectorRelational
openvdb_ax/test/snippets/cast/: castDouble  castDoubleVolume  castFloat  castFloatVolume  castImplicitArithmetic  castImplicitAssign  castImplicitComponentAssign  castInt  castIntVolume  castLiteral  castLong  castLongVolume  castShort
openvdb_ax/test/snippets/declare/: declareAmbiguousScalarAttributes  declareAmbiguousVectorAttributes  declareAttributesVolume  declareNewAttributes
openvdb_ax/test/snippets/function/: functionAbs  functionCeil  functionClamp  functionDot  functionFit  functionImplicitArguments  functionInGroup  functionIntrinsic  functionLength  functionLengthSq  functionLookup  functionMax  functionMin  functionNormalize  functionPrescale  functionRand  functionRound
openvdb_ax/test/snippets/keyword/: conditionalReturn  doWhileLoopKeywords  simpleReturn
openvdb_ax/test/snippets/string/: assignFromAttributes  assignFromLocals  assignNewOverwrite  binaryConcat
openvdb_ax/test/snippets/unary/: unaryNegateVector
openvdb_ax_houdini/: CMakeLists.txt  Makefile  SOP_OpenVDB_AX.cc
openvdb_ax_houdini/ax/: HoudiniAXUtils.h
travis/: install-blosc.sh  install-openvdb.sh  install.sh
